force-app/main/default/objects/Lead/fields/Amount_Recieved_Gbp__c.field-meta.xml
<CustomField>
    <fullName>Amount_Recieved_Gbp__c</fullName>
    <label>Amount Received Gbp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>