force-app/main/default/objects/Lead/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Type_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Assignment_Type</valueSetName>
    </valueSet>
</CustomField>