force-app/main/default/objects/Lead/fields/Beauhurst_ID__c.field-meta.xml
<CustomField>
    <fullName>Beauhurst_ID__c</fullName>
    <externalId>true</externalId>
    <label>Registered Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>