force-app/main/default/objects/Lead/fields/Beauhurst_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Beauhurst_Updated_Date__c</fullName>
    <label>Beauhurst Updated Date</label>
    <type>DateTime</type>
</CustomField>