force-app/main/default/objects/Lead/fields/Buzzwords__c.field-meta.xml
<CustomField>
    <fullName>Buzzwords__c</fullName>
    <label>Buzzwords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>