force-app/main/default/objects/Lead/fields/CF_Date_of_First_Interaction__c.field-meta.xml
<CustomField>
    <fullName>CF_Date_of_First_Interaction__c</fullName>
    <label>CF Date of First Interaction</label>
    <type>Date</type>
</CustomField>