force-app/main/default/objects/Lead/fields/Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Contact_Information__c</fullName>
    <label>Contact Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>