force-app/main/default/objects/Lead/fields/Data_Origination__c.field-meta.xml
<CustomField>
    <fullName>Data_Origination__c</fullName>
    <label>Data Origination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>