force-app/main/default/objects/Lead/fields/Date_Grant_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Grant_Received__c</fullName>
    <label>Date Grant Received</label>
    <type>Date</type>
</CustomField>