force-app/main/default/objects/Lead/fields/Date_of_WebLead__c.field-meta.xml
<CustomField>
    <fullName>Date_of_WebLead__c</fullName>
    <label>Date of WebLead</label>
    <type>Date</type>
</CustomField>