force-app/main/default/objects/Lead/fields/Directors__c.field-meta.xml
<CustomField>
    <fullName>Directors__c</fullName>
    <label>Directors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>