force-app/main/default/objects/Lead/fields/Disqualification_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Explanation__c</fullName>
    <label>Disqualification Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>