force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Disqualification Reason</description>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Cannot Contact</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Poor Fit</fullName>
            </value>
            <value>
                <fullName>Not the right time</fullName>
            </value>
            <value>
                <fullName>Another advisor appointed</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Regulatory Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>