force-app/main/default/objects/Lead/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>