force-app/main/default/objects/Lead/fields/Fundraising_Id__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Id__c</fullName>
    <label>Fundraising Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>