force-app/main/default/objects/Lead/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <label>Incumbent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>