force-app/main/default/objects/Lead/fields/Investor_Names__c.field-meta.xml
<CustomField>
    <fullName>Investor_Names__c</fullName>
    <label>Investor Names</label>
    <type>TextArea</type>
</CustomField>