force-app/main/default/objects/Lead/fields/Is_Lead_Participant__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Participant__c</fullName>
    <label>Is Lead Participant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>