force-app/main/default/objects/Lead/fields/Is_Sme__c.field-meta.xml
<CustomField>
    <fullName>Is_Sme__c</fullName>
    <label>Is Sme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>