force-app/main/default/objects/Lead/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actuary</fullName>
            </value>
            <value>
                <fullName>Annuity Provider</fullName>
            </value>
            <value>
                <fullName>Banker</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Company Secretary</fullName>
            </value>
            <value>
                <fullName>Director,Finance Director</fullName>
            </value>
            <value>
                <fullName>Finance Controller</fullName>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Head Of Finance</fullName>
            </value>
            <value>
                <fullName>Head Of Sustainability</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Investment Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Managing Director</fullName>
            </value>
            <value>
                <fullName>Operations Director</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
            <value>
                <fullName>Technical Director</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>VP of Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>