force-app/main/default/objects/Lead/fields/Lead_Type_Area__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type_Area__c</fullName>
    <label>Lead Type Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Type_Area</valueSetName>
    </valueSet>
</CustomField>