force-app/main/default/objects/Lead/fields/Marketing_Description__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Description__c</fullName>
    <label>Marketing Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>