force-app/main/default/objects/Lead/fields/Matching_Account_Exists__c.field-meta.xml
<CustomField>
    <fullName>Matching_Account_Exists__c</fullName>
    <formula>NOT(ISBLANK( Account__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matching Account Exists</label>
    <type>Checkbox</type>
</CustomField>