force-app/main/default/objects/Lead/fields/Net_Assets__c.field-meta.xml
<CustomField>
    <fullName>Net_Assets__c</fullName>
    <label>Net Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>