force-app/main/default/objects/Lead/fields/Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_Name__c</fullName>
    <label>Officer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>