force-app/main/default/objects/Lead/fields/Other_Trading_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Trading_Names__c</fullName>
    <label>Other Trading Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>