force-app/main/default/objects/Lead/fields/PE_Backed_Account__c.field-meta.xml
<CustomField>
    <fullName>PE_Backed_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PE Backed Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (PE Backed Account)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>