force-app/main/default/objects/Lead/fields/Preferences_Updated_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Updated_on_Time__c</fullName>
    <label>Preferences Updated on Time</label>
    <type>Time</type>
</CustomField>