force-app/main/default/objects/Lead/fields/Primary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sector__c</fullName>
    <label>Primary Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Sector</valueSetName>
    </valueSet>
</CustomField>