force-app/main/default/objects/Lead/fields/Project_Grants_Total_Gbp__c.field-meta.xml
<CustomField>
    <fullName>Project_Grants_Total_Gbp__c</fullName>
    <label>Project Grants Total Gbp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>