force-app/main/default/objects/Lead/fields/Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Project_Title__c</fullName>
    <label>Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>