force-app/main/default/objects/Lead/fields/PSC_Name__c.field-meta.xml
<CustomField>
    <fullName>PSC_Name__c</fullName>
    <label>PSC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>