force-app/main/default/objects/Lead/fields/Purposes_Of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Purposes_Of_Funding__c</fullName>
    <label>Purposes Of Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>