force-app/main/default/objects/Lead/fields/Registered_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Number__c</fullName>
    <label>Registered Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>