force-app/main/default/objects/Lead/fields/Registered_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address_Line_2__c</fullName>
    <label>Registered Office Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>