force-app/main/default/objects/Lead/fields/Secondary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sector__c</fullName>
    <label>Secondary Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Secondary_Sector</valueSetName>
    </valueSet>
</CustomField>