force-app/main/default/objects/Lead/fields/SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>SIC_Codes__c</fullName>
    <label>SIC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>