force-app/main/default/objects/Lead/fields/Started_Tracking_At__c.field-meta.xml
<CustomField>
    <fullName>Started_Tracking_At__c</fullName>
    <label>Started Tracking At</label>
    <type>Date</type>
</CustomField>