force-app/main/default/objects/Lead/fields/Target_Markets__c.field-meta.xml
<CustomField>
    <fullName>Target_Markets__c</fullName>
    <label>Target Markets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>