force-app/main/default/objects/Lead/fields/Top_Level_Sector_Groups__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Sector_Groups__c</fullName>
    <label>Top Level Sector Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>