force-app/main/default/objects/Lead/fields/Tracked_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Status__c</fullName>
    <label>Tracked Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>