force-app/main/default/objects/Lead/fields/Types_Of_Funding__c.field-meta.xml
<CustomField>
    <fullName>Types_Of_Funding__c</fullName>
    <label>Types Of Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>