force-app/main/default/objects/Lead/fields/Ultimate_Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Company_Name__c</fullName>
    <label>Ultimate Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>