force-app/main/default/objects/Lead/fields/Valuation_Gbp__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Gbp__c</fullName>
    <label>Valuation Gbp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>