force-app/main/default/objects/Lead/validationRules/V1_Blank_Company_when_Private_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>V1_Blank_Company_when_Private_Client</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
NOT(ISBLANK(Company)),
TEXT( Ownership__c ) =&quot;Private Client&quot;)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Please leave the Company blank when Ownership is &quot;Private Client&quot;</errorMessage>
</ValidationRule>