force-app/main/default/objects/Lead/validationRules/V2_Require_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>V2_Require_Company</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
 ISBLANK(Company),
 TEXT( Ownership__c ) &lt;&gt; &quot;Private Client&quot;,
 TEXT(Type_of_Business__c) &lt;&gt; &apos;Private Client&apos;,
 TEXT(Type_of_Business__c) &lt;&gt; &apos;Pension Scheme&apos;
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>Please enter a value on Company.</errorMessage>
</ValidationRule>