force-app/main/default/objects/Lead/validationRules/V3_RegisteredNumberRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>V3_RegisteredNumberRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.Org_Wide_Settings__c.Disable_Validation_Rules__c),
ISBLANK(Beauhurst_ID__c),
TExt(Status) &lt;&gt; &quot;Disqualified&quot;,
NOT(ISBLANK(Company)),
TEXT(Type_of_Business__c) &lt;&gt; &apos;Not For Profit&apos;,
TEXT(Type_of_Business__c) &lt;&gt; &apos;Pension Scheme&apos;
)</errorConditionFormula>
    <errorDisplayField>Beauhurst_ID__c</errorDisplayField>
    <errorMessage>Please enter a Registered Number</errorMessage>
</ValidationRule>