force-app/main/default/objects/Lead/listViews/Origination_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Origination_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Data_Origination__c</field>
        <operation>equals</operation>
        <value>Lead Uploader Origination</value>
    </filters>
    <label>Origination Queue</label>
    <queue>Origination_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>